Removed focus from KisTransportControl's QToolButtons.

Should solve some usability issues when navigating keyframes
where pressing space to pan the canvas would cause an erroneous
next key / prev key call (or other transport button actions.)

Since we have hotkeys to allow the user to trigger these based
on key presses, we can simply remove this behavior altogether.
However, this issue exists in other parts of Krita and will need
a more robust solution to solve the issue globally across all
widgets.

BUG:444310